kubernetes/foundation/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-app
  labels:
    env: dev
