kubernetes/foundation/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-svc
  namespace: devops-app
spec:
  selector:
    app: devops-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
